# chatdocs

./: .gitignore  README.md  chain.py  main.py  model.py  pyproject.toml  retriever.py
vectorstore/db_faiss/: index.faiss  index.pkl
